<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2012, Joseph Casamento
  ~ All rights reserved.
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this
  ~    list of conditions and the following disclaimer.
  ~ 2. Redistributions in binary form must reproduce the above copyright notice,
  ~    this list of conditions and the following disclaimer in the documentation
  ~    and/or other materials provided with the distribution.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  ~ ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  ~ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
  ~ ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  ~ (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  ~ LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
  ~ ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>

    <string name="app_name">SubsonicClient</string>
    
    <!-- options menu -->
    <string name="select_media_folder">Select Media Folder</string>
    
	<!-- context menu -->    
    <string name="download_original_file">Download Original File</string>
    <string name="download_transcoded_file">Download Transcoded File</string>
    <string name="stream_file">Stream File</string>

    <!-- server browser fragment stuff -->
    <string name="server_browser_no_data">No data here - set up your server in the preferences</string>

	<!-- download manager fragment stuff -->
	<string name="download_manager_no_downloads">No downloads</string>
    
    <!-- buttons -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <!-- preferences -->
    <string name="preferences">Preferences</string>
    
    <!-- server preferences -->
    <string name="server">Server</string>
    <string name="server_pref_title">Server</string>
    
    <string name="server_url_pref_name">Server URL</string>
    <string name="server_url_pref_title">Server URL</string>
    <string name="server_url_pref_summary">The URL of your Subsonic server</string>
    
    <string name="username_pref_name">Username</string>
    <string name="username_pref_title">Username</string>
    <string name="username_pref_summary"></string>
    
    <string name="password_pref_name">Password</string>
    <string name="password_pref_title">Password</string>
    <string name="password_pref_summary"></string>
    
    <string name="test_connection">Test Connection</string>
    <string name="test_connection_summary"></string>

	<string name="please_wait">Please wait...</string>
	<string name="testing_connection">Testing connection...</string>
	<string name="missing_password">No password entered</string>
	<string name="missing_username">No username entered</string>
	<string name="missing_server_url">No server URL entered</string>
	<string name="success">Success!</string>
	<string name="failure">Failure.</string>
	<string name="error">Error!</string>
	<string name="download_original">Download Original</string>
	<string name="download_transcoded">Download Transcoded</string>
	<string name="server_connection_problem">There was a problem connecting to the server.</string>
    <string name="download_service_notification_text">SubsonicClient download service</string>
    <string name="download_service_ticker">SubsonicClient download started</string>
    <string name="download_service_content_title">SubsonicClient</string>
    <string name="download_service_content_text">Downloading files</string>
    <string name="download_service">Download service started</string>
    <string name="server_not_set_up">The server details have not been set up.</string>
    <string name="refresh">Refresh</string>
    <string name="icon">icon</string>
    <string name="title">title</string>
    <string name="path">Path</string>

</resources>