<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2012, Joseph Casamento
  ~ All rights reserved.
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this
  ~    list of conditions and the following disclaimer.
  ~ 2. Redistributions in binary form must reproduce the above copyright notice,
  ~    this list of conditions and the following disclaimer in the documentation
  ~    and/or other materials provided with the distribution.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  ~ ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  ~ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
  ~ ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  ~ (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  ~ LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
  ~ ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/server">

        <EditTextPreference 
            android:name="@string/server_url_pref_name"
            android:summary="@string/server_url_pref_summary"
            android:title="@string/server_url_pref_title"
            android:inputType="textUri"
            android:key="serverUrl"
            />

        <EditTextPreference 
            android:name="@string/username_pref_name"
            android:summary="@string/username_pref_summary"
            android:title="@string/username_pref_title"
            android:inputType="text"
            android:key="username"
            />

        <EditTextPreference 
            android:name="@string/password_pref_name"
            android:summary="@string/password_pref_summary"
            android:title="@string/password_pref_title"
            android:inputType="textPassword"
            android:key="password"
            />

        <Preference
            android:name="@string/test_connection"
            android:summary="@string/test_connection_summary"
            android:title="@string/test_connection"
            android:key="testConnection"
            />

    </PreferenceCategory>

</PreferenceScreen>